--- a/package.json
+++ b/package.json
@@ -13,14 +13,15 @@
     "@mui/lab": "^5.0.0-alpha.154",
     "@mui/material": "^5.14.19",
     "@reduxjs/toolkit": "^1.9.7",
-    "@tanstack/react-query": "^5.12.2",
-    "@tanstack/react-query-devtools": "^5.12.2",
+    "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-query-devtools": "^4.32.6",
     "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "framer-motion": "^10.16.12",
     "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
